webapp/src/app/styles/index.css
/**
 * INDEX.CSS - Shared Theming configuration for ShadCN/UI with Tailwind
 *
 * Define
 * - agnostic rules for all apps: tailwind plugins, dark/light selector
 * - inline theme to map apps token to tailwind classes
 *
 * ℹ️ Import this file in {app}.css files, where tailwindcss is imported
 * Else the tailwind directives won't be applied.
 * ⚠️ Don't import it in your main tsx file, import {app}.css instead
 * ⚠️ Don't `@import "tailwindcss"` here, else tailwind classes will be
 * loaded in 2 different css files (duplicate).
 */

@plugin "tailwindcss-animate";

@custom-variant dark (&:where(.dark *));

:root {
  --radius: 0.625rem;
  --spacing-base: 0.25rem;
}

/* ========================================================================
 * EXTEND TAILWIND THEME - https://tailwindcss.com/docs/theme
 * ======================================================================== 
 * Pour que les variables soient intégrées nativement dans des classes
 * tailwind, on utilise les namespaces (color-,radius-,...).
 * On fait cela pour toutes les variables ShadCn (limitation tailwind v4) 
 */

@theme inline {
  --spacing-2xs: calc(var(--spacing-base) / 2);
  --spacing-xs: calc(var(--spacing-base));
  --spacing-sm: calc(var(--spacing-base) * 2);
  --spacing-md: calc(var(--spacing-base) * 3);
  --spacing-lg: calc(var(--spacing-base) * 4);
  --spacing-xl: calc(var(--spacing-base) * 5);
  --spacing-2xl: calc(var(--spacing-base) * 6);
  --spacing-3xl: calc(var(--spacing-base) * 8);
  --spacing-4xl: calc(var(--spacing-base) * 10);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);

  --color-background: var(--background);
  --color-foreground: var(--foreground);

  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);

  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);

  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);

  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-info: var(--info);
  --color-info-foreground: var(--info-foreground);

  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);

  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);

  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}

